Insert subheader text without replacing element. Give more height to subheader to avoid text cutoff

--- a/theme/basic.css
+++ b/theme/basic.css
@@ -575,7 +575,7 @@ pre code {
         margin: 0 0;
         font-weight: 100;
         font-size: 3em;
-        height: 1em;
+        height: 1.25em;
         line-height: 1;
     }
 
